[gd_scene load_steps=7 format=3 uid="uid://dnmx1kwxda2fy"]

[ext_resource type="Texture2D" uid="uid://cgrqcj5313tq4" path="res://assets/blue_panel.png" id="1_vehkw"]
[ext_resource type="LabelSettings" uid="uid://dg7hq1aaqhrp8" path="res://Scenes/white-32.tres" id="2_c7aop"]
[ext_resource type="Script" path="res://Scenes/level_button.gd" id="2_w151w"]
[ext_resource type="Texture2D" uid="uid://cphq1xj54rwmv" path="res://assets/green_checkmark.png" id="3_jaret"]
[ext_resource type="FontFile" uid="uid://c3tvii25oa87v" path="res://assets/LuckiestGuy-Regular.ttf" id="5_t0nwa"]

[sub_resource type="LabelSettings" id="LabelSettings_fm3ys"]
font = ExtResource("5_t0nwa")
font_size = 20
font_color = Color(0.447059, 1, 1, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="LevelButton" type="NinePatchRect"]
custom_minimum_size = Vector2(80, 80)
offset_right = 20.0
offset_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
texture = ExtResource("1_vehkw")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
script = ExtResource("2_w151w")

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "99"
label_settings = ExtResource("2_c7aop")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreBox" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/separation = 4

[node name="CheckMark" type="TextureRect" parent="ScoreBox"]
z_index = 1
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("3_jaret")
stretch_mode = 4

[node name="Shadow" type="TextureRect" parent="ScoreBox/CheckMark"]
modulate = Color(0.235294, 0.235294, 0.235294, 0.654902)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
texture = ExtResource("3_jaret")
stretch_mode = 4

[node name="BestLabel" type="Label" parent="ScoreBox"]
layout_mode = 2
text = "100"
label_settings = SubResource("LabelSettings_fm3ys")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
